--- a/MyLibrary.bib
+++ b/MyLibrary.bib
@@ -739,11 +739,15 @@ by secondary recirculating motions that are independent of confinement
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\W8BFQF35\\Fox - Large-Eddy-Simulation Tools for Multiphase Flows.pdf:application/pdf},
 }
 
-@article{zouLARGEEDDYSIMULATION,
-	title = {{LARGE} {EDDY} {SIMULATION} {OF} {TURBULENT} {FLOWS}},
+@article{zouLargeEddySimulation2006,
+	title = {Large eddy simulation of turbulent flow},
+	volume = {7},
 	abstract = {Large eddy simulation (LES) is a technique intermediate between the direct numerical simulation (DNS) of turbulent flow and the solution of the Reynolds-averaged equations. The technique of LES is now gradually used to simulate turbulent flows in engineering. Methods for LES will be reviewed in this paper. Applying LES for simulating turbulent flows, both incompressible and compressible, is outlined. This review article would be useful for those starting to consider using LES for turbulent flow simulations.},
 	language = {en},
+	number = {1},
 	author = {Zou, G W and Liu, S L and Chow, W K and Gao, Y},
+	month = dec,
+	year = {2006},
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\GNXKJ798\\Zou et al. - LARGE EDDY SIMULATION OF TURBULENT FLOWS.pdf:application/pdf},
 }
 
@@ -764,4 +768,23 @@ by secondary recirculating motions that are independent of confinement
 	year = {2015},
 	pages = {11--24},
 	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\WJ5UNZZ8\\Zhiyin - 2015 - Large-eddy simulation Past, present and the future.pdf:application/pdf},
+}
+
+@article{choiGridpointRequirementsLarge2012,
+	title = {Grid-point requirements for large eddy simulation: {Chapman}’s estimates revisited},
+	volume = {24},
+	issn = {1070-6631, 1089-7666},
+	shorttitle = {Grid-point requirements for large eddy simulation},
+	url = {https://pubs.aip.org/pof/article/24/1/011702/361102/Grid-point-requirements-for-large-eddy-simulation},
+	doi = {10.1063/1.3676783},
+	abstract = {Resolution requirements for large eddy simulation (LES), estimated by Chapman [AIAA J. 17, 1293 (1979)], are modified using accurate formulae for high Reynolds number boundary layer flow. The new estimates indicate that the number of grid points (N) required for wall-modeled LES is proportional to ReLx, but a wall-resolving LES requires ÑReLx13/7, where Lx is the flat-plate length in the streamwise direction. On the other hand, direct numerical simulation, resolving the Kolmogorov length scale, requires ÑReLx37/14.},
+	language = {en},
+	number = {1},
+	urldate = {2025-01-14},
+	journal = {Physics of Fluids},
+	author = {Choi, Haecheon and Moin, Parviz},
+	month = jan,
+	year = {2012},
+	note = {Publisher: AIP Publishing},
+	file = {PDF:C\:\\Users\\bennyv\\Zotero\\storage\\SEC7LZSA\\Choi and Moin - 2012 - Grid-point requirements for large eddy simulation Chapman’s estimates revisited.pdf:application/pdf},
 }
